--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@tinymce/tinymce-angular": "^3.3.0",
     "bootstrap": "^3.4.1",
+    "highlightjs": "^9.12.0",
+    "ngx-quill": "^7.2.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
