--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/quill/dist/quill.snow.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/highlightjs/styles/dracula.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": [
-              "node_modules/highlightjs/highlight.pack.js",
-              "src/assets/js/hljsInit.js"
+
+              "./node_modules/quill/dist/quill.min.js"
             ]
           },
           "configurations": {
