--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@tinymce/tinymce-angular": "^3.3.0",
+    "angular2-highlight-js": "^8.0.1",
     "bootstrap": "^3.4.1",
-    "highlightjs": "^9.12.0",
+    "highlight.js": "^9.16.2",
     "ngx-quill": "^7.2.0",
     "quill": "^1.3.6",
     "rxjs": "~6.4.0",
