--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@tinymce/tinymce-angular": "^3.3.0",
-    "angular2-highlight-js": "^8.0.1",
     "bootstrap": "^3.4.1",
-    "highlight.js": "^9.16.2",
     "ngx-quill": "^7.2.0",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -34,9 +34,10 @@
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/quill": "^2.0.3",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
